--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
-    "@react-three/drei": "^9.77.4",
-    "@react-three/fiber": "^8.13.0",
+    "@react-three/drei": "^9.80.1",
+    "@react-three/fiber": "^8.13.6",
+    "@react-three/postprocessing": "^2.15.0",
+    "@types/three": "^0.155.0",
     "r3f-perf": "^7.1.2",
     "react": "18.2",
     "react-dom": "18.2",
