--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
+    "@react-spring/three": "^9.7.3",
+    "@react-spring/web": "^9.7.3",
     "@react-three/drei": "^9.80.1",
     "@react-three/fiber": "^8.13.6",
     "@react-three/postprocessing": "^2.15.0",
     "@types/three": "^0.155.0",
+    "leva": "^0.9.35",
     "r3f-perf": "^7.1.2",
     "react": "18.2",
     "react-dom": "18.2",
